# KS_UNIFY

./: .gitignore  backend_sidecar.py  ks-unify-backend-x86_64-unknown-linux-gnu.spec  requirements.txt
.github/workflows/: build-macos.yml  build-windows.yml
backend/api/: main.py
backend/core/: api_settings.py  chat_history.py  dashboard.py  logger.py  models_registry.py  network_info.py  response.py  status.py
backend/core/providers/: base.py  manager.py  ollama_cloud_provider.py  ollama_provider.py  openai_provider.py
backend/core/routing/: router.py
backend/core/services/: service_manager.py
backend/models/: chat.py  routing_rule.py
configs/: routing_rules.json
desktop/: index.html
desktop/src/: index.html  main.js  style.css
desktop/src-tauri/: Cargo.toml  Cargo.toml.bak.1781454740  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: BACKEND_STATUS.md
examples/unify_web_chat/: app.js  index.html  run.sh  server.py  style.css
scripts/: unify.sh
