[package]
name = "ks_unify"
version = "0.1.0"
description = "KS Unify AI Control Layer"
authors = ["Kanasaka"]
edition = "2021"

[lib]
name = "ks_unify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloc-stdlib = "=0.2.2"
brotli-decompressor = "=5.0.0"
